# obbenchmark

./: .env  .env.example  Cargo.toml  README.md  build.rs
src/: benchmark.rs  env.rs  main.rs  models.rs  sockets.rs
src/config/: config.example.json  config.json
src/models/: binance_models.rs  common.rs
src/proto/: message.proto
src/sockets/: binance_depth_update_socket.rs  binance_ob_socket.rs  common.rs
